src/App.css
/** General Styles **/

html {
  font-size: 16px;
}


h1, h2, h3, h4, h5, h6 {
  margin: 0;
  color: #333333;
}


h1,.h1 {font-size: 3rem}
h2,.h2 {font-size: 2.5rem}
h3,.h3 {font-size: 2rem}
h4,.h4 {font-size: 1.5rem}
h5,.h5 {font-size: 1rem}
h6,.h6 {font-size: .75rem}

div, span, input, textarea, button  {
  box-sizing: border-box;
  font-family: Cabin, Helvetica, Arial, sans-serif
}

img {
  width: 100%;
}


body {
  background-color: #f3eae1;
  font-family: Cabin, Helvetica, Arial, sans-serif;
  color: #5e5e5e;
}

header {
  background-color: #F9F8F4;
}

.container {
    max-width: 1100px;
    width: 100%;
    margin: auto;
    padding: 0 20px;
    box-sizing: border-box;
}


/** Header **/

.site-header {
    padding: 25px 0;
    margin-bottom: 20px;
}

.site-header .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.site-header__logo {
    width: 150px;
}

.site-header__logo svg {
    fill: #ff4d4f;
}

.site-header__minicart {
    display: flex;
    align-items: center;
    position: relative;
}

.site-header__minicart-icon {
    margin-right: 5px;
}

.site-header__minicart a {
    display: flex;
    align-items: center;
}

.site-header__minicart a span {
    margin-right: 10px;
    font-size: 14px;
}

.site-header__minicart a {
    text-decoration: none;
    color: #000;
}


.site-header__minicart a span.site-header__minicart-count {
    position: absolute;
    top: -10px;
    left: 1px;
    background-color: #ff4d4f;
    color: #fff;
    padding: 7px;
    font-size: 8px;
    border-radius: 100%;
    line-height: 50%;
}

.site-header__minicart a span.site-header__minicart-count:empty {
  display: none;
}

/** Grid System **/

.row {
  margin-left: -1rem;
  margin-right: -1rem;
}


.row [class*='col-'] {
  display:inline-block;
  vertical-align: top;
  padding: 0 0.75rem;
}

.col-full {
  width: 100%;
}

.col-half {
  width: 50%;
}

.col-one-fourth {
  width: 25%;
}

.col-three-fourths {
  width: 75%;
}

@media screen and (max-width: 767px) {

  .col-sm-full {
    width: 100%;
  }

  .col-sm-half {
      width: 50%;
  }

}

/** Form Elements **/

.form__element {
    padding: 0 15px;
}

.form__element input[type=text],
.form__element input[type=email]
 {
    width: 100%;
    padding: 1.2em 0.8em;
    border: 1px solid #e1e0de;
    border-radius: 3px;
    background-color: white;
    color: #333;
    margin-bottom: 1rem;
}


.form__element textarea {
    width: 100%;
    padding: 1.2em 0.8em;
    border: 1px solid #e1e0de;
    border-radius: 3px;
    background-color: white;
    color: #333;
    height: 200px;
}

.btn {
    cursor: pointer;
    display: inline-block;
    margin-top: 1rem;
    padding: 1rem 2rem;
    border: 1px solid transparent;
    border-radius: 0.1875rem;
    font-size: 1rem;
    text-align: center;
    white-space: nowrap;
}

.btn--full {
  width: 100%;
}

.btn--main {
  background-color: #ff4d4f;
  color: #fff;
}

.btn--main:hover {
  background-color: #ff0103;
}


/** Product Info **/

.product {
    padding: 30px 0px 100px;
}

.product__intro {
    margin-bottom: 30px;
}

.product__title {
    margin-bottom: 5px;
}

/** Product Options **/

.product__options-set {
    display: flex;
}

.product__options-heading {
    margin-bottom: 10px;
    font-weight: 600;
}

.product__option-label {
  margin-right: 10px;
  cursor: pointer
}

.product__option-label input {
    visibility: hidden;
    position: absolute;
}

.product__option-label span {
    font-size: 25px;
    font-weight: 600;
    padding: 10px 20px;
    box-sizing: border-box;
    display: inline-block;
    position: relative;
    background-color: white;
    border-radius: 5px;
    border: 2px solid transparent;
}


.product__option-label:hover span {
    border-color: #ff4d4f;
}

.product__option-label input:checked + span {
    box-shadow: inset 0px 0px 0px 3px #ff4d4f;
    border-color: #ff4d4f;
}

.product__option-custom input[type=number] {
    padding: 15px;
    box-sizing: border-box;
    -webkit-appearance: none;
    border-radius: 5px;
    border: none;
    box-shadow: none;
    height: 50px;
    font-size: 24px;
}

.product__option-group, .product__option-custom {
    margin-bottom: 20px;
}

.product__option-currency-sign {
  margin-right: 5px;
  font-size: 24px;
}

.product__option-note {
    margin-top: 5px;
}


/* Cart */

.cart--flyout {
    position: fixed;
    top: 0;
    right: -29rem;
    width: 29rem;
    height: 100vh;
    background-color: #fff;
    max-width: 100%;
    padding: 20px;
    transition: .5s ease right;
    -webkit-transition: .5s ease right;
    z-index: 9;
}

.cart--flyout-active {
  right: 0rem;
}

.cart__close {
  width: 30px;
  height: 30px;
}

.cart__header {
    display: flex;
}

.cart__title {
    flex-basis: 100%;
    text-align: center;
    text-transform: uppercase;
}

.cart__close-icon {
  fill: #ff4d4f;
}

.cart__form {
    margin-top: 30px;
}

.cart__single-item {
    margin-bottom: 1rem;
    padding-bottom: 1.5rem;
    border-bottom: 1px solid #e1e0de;
}

.cart__single-item:last-of-type {
  border-bottom: none;
}


.cart__single-item-heading {
  display: flex;
  justify-content: space-between;
}

.cart__single-item:last-of-type {
    margin-bottom: 0;
}

.cart__single-item-values {
    display: flex;
    justify-content: space-between;
}

.cart__single-item-remove {
  cursor: pointer;
}

.cart__single-item-remove svg {
  fill: #ff4d4f
}

.cart__single-item-attributes {
    color: #888;
    font-size: 0.75rem;
    line-height: 1.2;
    margin-top: 1rem;
}

.cart__single-item-attr-line {
    margin-top: 0.4rem;
}

.cart__subtotal {
    padding-top: 1.5rem;
    padding-bottom: 0.5rem;
    border-top: 1px solid #e1e0de;
    margin-top: 1.5rem;
}


.cart__empty {
    padding: 30px;
    margin-top: 1.5rem;
    text-align: center;
    border-top: 1px solid #ccc;
}

.cart__empty-message {
    text-indent: 1.2rem;
    margin-bottom: 1rem;
}

/* Cart Backdrop */

.cart-backdrop {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: rgba(255,255,255,0.8);
    z-index: -2;
    opacity: 0;
}

.cart-backdrop--active {
   z-index: 2;
   opacity: 1;
}

